add deployment frontend url

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_CONNECTION_STRING='mongodb+srv://Danya:qwerty123QQ@firstbackend.9xn5ilm.mongodb.net/?retryWrites=true&w=majority&appName=FirstBackend'
 JWT_SECRET='testtest'
+FRONTEND_URL='https://web-market-phi.vercel.app/'
